--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,7 +1,11 @@
 body{
     margin: 0;
     height: 100vh;
+    display: grid;
+    grid-template-rows: repeat(12, 1fr);
+    grid-template-columns: repeat(12, 1fr);
 }
+
 a{
     text-decoration: none;
 }
@@ -13,7 +17,10 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 8%;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    grid-column-start: 1;
+    grid-column-end: 13;
     width: 100%;
 }
 #logo{
@@ -30,4 +37,15 @@ header{
     display: flex;
     gap: 10%;
     color: black;
+}
+
+#cart-container{
+    grid-row-start: 6;
+    grid-row-end: 8;
+    grid-column-start: 1;
+    grid-column-end: 13;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: auto;
 }
