--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,5 +1,7 @@
 body {
+  height: 100vh;
   display: grid;
+  background-color: #EFF2F1;
   grid-template-rows: repeat(8, 1fr);
   grid-template-columns: repeat(12, 1fr);
   overflow: hidden;
@@ -69,7 +71,6 @@ hr {
 #depart {
   background-color: rgb(221, 221, 221);
   border-radius: 4px;
-
   position: absolute;
   top: 22%;
   left: 50%;
@@ -80,7 +81,6 @@ hr {
 #arrive {
   background-color: rgb(221, 221, 221);
   border-radius: 4px;
-
   position: absolute;
   top: 12%;
   left: 50%;
@@ -91,7 +91,6 @@ hr {
 #date {
   background-color: rgb(221, 221, 221);
   border-radius: 4px;
-
   position: absolute;
   top: 50%;
   left: 50%;
@@ -169,6 +168,71 @@ header {
   grid-column-end: 13;
   display: flex;
   flex-direction: column;
-  align-items: center;
+}
+
+#p-container{
   margin: auto;
+  text-align: center;
+}
+
+#pannier{
+margin: auto;
+width: 63%;
+height: auto;
+}
+
+#trajer-container{
+  display: flex;
+}
+
+#pcart{
+text-align: center;
+margin: auto;
+margin-bottom: 3vh;
+font-size: 18px;
+}
+
+.un-trajet{
+    font-size: 18px;
+  margin-bottom: 3vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  padding: 10px 0 10px 0;
+  justify-content: space-around;
+  background-color: #F5EEEE;
+}
+
+.btn-delete-cart{
+  border: solid 1px #469e86;
+  background-color: #469e86;
+  border-radius: 3px;
+  width: 4vh;
+  height: 4vh;
+}
+
+#validationPannier{
+  color: white;
+  margin: auto;
+  display: flex;
+  width: 100%;
+  height: 10vh;
+  background-color:#00153E;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 0% 0% 10px 10px;
+}
+
+#montant{
+  margin-left: 4%;
+  font-size: 18px;
+}
+#purchase{
+  border: solid 1px #469e86;
+  background-color: #469e86;
+  margin-right: 4%;
+  color: white;
+  border-radius: 3px;
+  padding: 1vh;
 }
